# bnn_initializations_project

./: README.md  pyproject.toml
notebooks/: bnn_metrics.ipynb  correlations.ipynb  example_dataset.ipynb  meta_features.ipynb  report.md
src/bnn_initializations_project/: __init__.py
src/bnn_initializations_project/cli/: __init__.py  aggregate_analyze.py  discover.py  extract_meta.py  train_eval.py
src/bnn_initializations_project/configs/: datasets.yaml  model.yaml  run.yaml
src/bnn_initializations_project/dataio/: __init__.py  manifest.py  splits.py  storage.py
src/bnn_initializations_project/features/: __init__.py  meta_utils.py  mfe_extract.py
src/bnn_initializations_project/metrics/: __init__.py  predictive.py  summary.py
src/bnn_initializations_project/models/: __init__.py  bnn.py  inference.py  priors_impl.py
src/bnn_initializations_project/pipelines/: __init__.py  common.py  discover_datasets.py  run_analysis.py  run_meta_features.py  run_training.py
src/tests/: test_build_log_posterior.py  test_metrics.py  test_mfe_extract.py  test_network.py  test_priors_logpdf.py
