[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "bnn-initializations-project"
version = "0.1.0"
dependencies = [
    "jax>=0.4",
    "jaxlib",
    "blackjax>=1.0",
    "numpy",
    "pandas",
    "pyarrow",
    "scikit-learn",
    "pymfe",
    "openml",
    "tqdm",
    "pyyaml",
    "joblib",
    "scipy",
    "pytest",
    "matplotlib",
    "notebook",
    "ucimlrepo"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]